Deploy react app

--- a/react-jobly-mock-api/jobly/package.json
+++ b/react-jobly-mock-api/jobly/package.json
@@ -1,7 +1,7 @@
 {
   "name": "jobly-frontend",
   "version": "2.1.0",
-  "homepage": "https://gitname.github.io/React-Jobly",
+  "homepage": "https://Tyshanae.github.io/React-Jobly",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
